@@ -1,5 +1,8 @@
 2004-11-15  John Finlay  <finlay@moeraki.com>
 
+	* pygtk-gtktoolitem.xml (rebuild_menu): Add description
+	("create-menu-proxy"): Update description.
+
 	* pygtk-gtktextbuffer.xml (backspace, "tag-table"): Add descriptions.
 
 2004-11-14  John Finlay  <finlay@moeraki.com>
